# ferra-lang

./: .gitignore  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  lang-spec-v4.yaml  rust-toolchain.toml  test_results.txt
crates/ferra_parser/: CONTRIBUTOR_GUIDE.md  Cargo.toml  DESIGN_IMPLEMENTATION_PLAN.md  ERROR_CATALOG.md  README.md  TEST_DOCUMENTATION.md  TEST_INFRASTRUCTURE.md  USER_API_GUIDE.md  benchmark_output.json
crates/ferra_parser/benches/: parser_bench.rs  parser_benchmarks.rs
crates/ferra_parser/docs/: CONTRIBUTOR_GUIDE.md  DESIGN_IMPLEMENTATION_PLAN.md  ERROR_CATALOG.md  TEST_DOCUMENTATION.md  TEST_INFRASTRUCTURE.md  USER_API_GUIDE.md
crates/ferra_parser/scripts/: error_recovery_perf_tracker.rs
crates/ferra_parser/src/: lib.rs  test_utils.rs
crates/ferra_parser/tests/: test_additional_coverage.rs  test_array_indexing_coverage.rs  test_async_functions.rs  test_blocks.rs  test_complex_nested_attributes.rs  test_control_flow_integration.rs  test_coverage_improvement.rs  test_enhanced_test_infrastructure.rs  test_error_path_coverage_blitz.rs  test_error_recovery_regression.rs  test_error_recovery_stress.rs  test_error_recovery_validation.rs  test_expressions.rs  test_fixture_parsing.rs  test_full_programs.rs  test_grammar_coverage.rs  test_grammar_edge_cases.rs  test_integration_boundary_blitz.rs  test_massive_coverage_push.rs  test_memory_profiling.rs  test_micro_targeting_edge_blitz.rs  test_modifier_combinations.rs  test_parser_bug_fix.rs  test_parser_stress_coverage.rs  test_phase_2_4_blocks.rs  (+11 more)
(+180 files in other folders)
