[package]
name = "ferra_parser"
version = "0.1.0"
edition = "2021"

[features]
default = ["test-utils"]
test-utils = []

[dependencies]
# Token stream and lexer output
ferra_lexer = { path = "../ferra_lexer" }

# Error handling and diagnostics
thiserror = "1.0"
miette = { version = "5.0", features = ["fancy"] }

# Arena allocation for AST nodes
bumpalo = "3.14"

# Optional for testing and development
[dev-dependencies]
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parser_benchmarks"
harness = false 